--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,11 +4,17 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet'>
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+
+ <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css"
+   integrity="sha512-07I2e+7D8p6he1SIM+1twR5TIrhUQn9+I6yjqD53JQjFiMf8EtC93ty0/5vJTZGF8aAocvHYNEDJajGdNx1IsQ=="
+   crossorigin=""/>
+
+
   </head>
   <body>
     <header>
       <div class="container">
-        <h1 class="title">Learning Flask</h1>
+        <h1 class="title">Learning BASH</h1>
       </div>
     </header>
     
