--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
                 {% endfor %}
               {% endif %}
 
-              {{ form.address(placeholder="Enter a command to explore syntax and examples.") }}
+              {{ form.address(placeholder="Enter a command to explore examples.") }}
             </div>
             
             {{ form.submit(class="btn-primary") }}
