--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -14,7 +13,7 @@
   <body>
     <header>
       <div class="container">
-        <h1 class="title">Learning BASH</h1>
+        <h1 class="title">Learning BASH Commands</h1>
       </div>
     </header>
     
